--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.7",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "redis": "^4.6.10",
     "sequelize": "^6.33.0",
     "slugify": "^1.6.6",
