--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "bull": "^4.11.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
@@ -27,8 +28,5 @@
     "sequelize": "^6.33.0",
     "slugify": "^1.6.6",
     "sqlite3": "^5.1.6"
-  },
-  "devDependencies": {
-    "dotenv": "^16.3.1"
   }
 }
