--- a/server/.env.example
+++ b/server/.env.example
@@ -3,4 +3,14 @@ JWT_SECRET = thisisasecret
 EMAIL_SERVICE = gmail
 EMAIL_HOST_USER = sgo2010.sg@gmail.com
 EMAIL_HOST_PASSWORD = ouocgnskvhbhiuby
-REDIS_URL = rediss://red-chmk7sl269vfed46ckkg:nvEATOYoQXaHZBfuCXQfBJ7KaDJ1s5YE@oregon-redis.render.com:6379
+REDIS_URL = rediss://red-cm5dav8cmk4c73couopg:NPhQjYgcwd1bYoRpiYdvworGVg9drAOz@oregon-redis.render.com:6379
+
+REDIS_HOST = oregon-redis.render.com
+REDIS_PORT = 6379
+REDIS_USER = red-cm5dav8cmk4c73couopg
+REDIS_PASSWORD = NPhQjYgcwd1bYoRpiYdvworGVg9drAOz
+
+
+AFRICEL_SMPP_HOST_PORT = http://10.255.255.2:1401
+AFRICEL_SMPP_USERNAME = mobicom
+AFRICEL_SMPP_PASSWORD = 123QasW321
