--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bull-board/express": "^5.10.2",
+    "axios": "^1.6.3",
     "bcrypt": "^5.1.1",
-    "bull": "^4.11.4",
+    "bull": "^3.29.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
