Africell Production Ready

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,16 +1,9 @@
 NODE_ENV = development
-JWT_SECRET = thisisasecret
+JWT_SECRET = secretgoeshere
 EMAIL_SERVICE = gmail
-EMAIL_HOST_USER = sgo2010.sg@gmail.com
-EMAIL_HOST_PASSWORD = ouocgnskvhbhiuby
-REDIS_URL = rediss://red-cm5dav8cmk4c73couopg:NPhQjYgcwd1bYoRpiYdvworGVg9drAOz@oregon-redis.render.com:6379
-
-REDIS_HOST = oregon-redis.render.com
-REDIS_PORT = 6379
-REDIS_USER = red-cm5dav8cmk4c73couopg
-REDIS_PASSWORD = NPhQjYgcwd1bYoRpiYdvworGVg9drAOz
+EMAIL_HOST_USER = site@gmail.com
+EMAIL_HOST_PASSWORD = qoocgnskvhbhiuby
+MONGO_URL = mongodb://0.0.0.0:27017/mobicom
 
 
-AFRICEL_SMPP_HOST_PORT = http://10.10.215.52
-AFRICEL_SMPP_USERNAME = mobicom
-AFRICEL_SMPP_PASSWORD = 123QasW321
+AFRICEL_SMS_API = http://10.10.215.52/mobicomsms/sendsms
